<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".puzzles">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/fondo"
        android:theme="?attr/actionBarTheme"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:elevation="4dp"
        tools:ignore="MissingConstraints"/>



    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/custom_button_primary_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Title, secondary and supporting text -->
        <TextView android:id="@+id/gameclokpuzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameclock"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="@font/audiowide" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLinearLayout">




        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/fondo"
            app:cardCornerRadius="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/botones"
            app:strokeWidth="2dp">

            <!-- Contenido del primer MaterialCardView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/puntuacion"
                    android:textAlignment="gravity"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    android:layout_width="130dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/botones"
                    android:text="@string/puntaje"
                    android:textAllCaps="false"
                    android:textColor="@color/fondo"
                    android:textSize="33sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/botones"
                    app:strokeWidth="2dp" />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="130dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/botones"
                    android:text="@string/ranking"
                    android:textAllCaps="false"
                    android:textSize="33sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/botones"
                    app:strokeWidth="2dp" />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/puntaje1"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                    <TextView
                        android:layout_width="197dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ranking1"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/fondo"
            app:cardCornerRadius="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/botones"
            app:strokeWidth="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="102dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="102dp"
                    android:drawableStart="@drawable/icon_calcualtor"
                    android:text="@string/matematicas"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_control"
                    android:text="@string/juego1"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold" />


            </RelativeLayout>


            <!-- Campo de fecha -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_input_game"
                    android:drawablePadding="8dp"
                    android:hint="@string/labelRespuesta" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="150dp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_control"
                    android:text="@string/juego2"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold" />


            </RelativeLayout>


            <!-- Campo de fecha -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="180dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/custom_input_game"
                    android:drawablePadding="8dp"
                    android:hint="@string/labelRespuesta" />

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnenviar"
        android:layout_width="130dp"
        android:layout_height="65dp"

        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/botones"
        android:text="@string/enviar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:strokeColor="@color/botones"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
