<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nueva_Alarma"
    android:background="@color/fondo">


    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/fondo"
        android:theme="?attr/actionBarTheme"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:elevation="4dp"
        tools:ignore="MissingConstraints"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- Campo de fecha -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="25dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_background"
                android:hint="@string/labelfecha"
                android:drawableEnd="@drawable/icon_calendario"
                android:drawablePadding="8dp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/labelhora">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_background"
                android:drawableEnd="@drawable/icon_relog_m"
                android:drawablePadding="8dp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="340dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/repetición"
            android:drawableEnd="@drawable/icon_switch"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textStyle="bold" />

        <!-- RadioButtons para la repetición de la alarma -->
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#6200EA"
                android:text="L" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#8B56E8"
                android:text="M" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#8B56E8"
                android:text="Mi" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#8B56E8"
                android:text="J" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#8B56E8"
                android:text="V" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#8B56E8"
                android:text="S" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#8B56E8"
                android:checked="true"
                android:text="D"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <!-- Agrega los otros días de la semana según lo necesites -->

        </RadioGroup>


        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCrear"
                android:layout_width="130dp"
                android:layout_height="65dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/botones"
                android:text="@string/crear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:strokeColor="@color/botones"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="130dp"
                android:layout_height="65dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/fondo2"
                android:text="@string/perzonalizar"
                android:textAllCaps="false"
                android:textColor="@color/botones"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:strokeColor="@color/botones"
                app:strokeWidth="2dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
